--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt": "^2.14.6",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
